force-app/main/default/objects/TVA_CFB__Folder_Links__c/TVA_CFB__Folder_Links__c.object-meta.xml
<CustomObject>
    <description>Folder Links of Cloud Files.</description>
    <label>Folder Link</label>
    <nameField>
        <displayFormat>FL-{0000}</displayFormat>
        <label>Folder Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Folder Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>