force-app/main/default/objects/TVA_CFB__Folder_Links__c/fields/TVA_CFB__Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Folder_Name__c</fullName>
    <label>Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>