force-app/main/default/objects/TVA_CFB__Folder_Links__c/fields/TVA_CFB__Folder_Share__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Folder_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Folder Share</label>
    <type>Checkbox</type>
</CustomField>