force-app/main/default/objects/TVA_CFB__Folder_Links__c/fields/TVA_CFB__Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Parent_ID__c</fullName>
    <label>Parent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>