force-app/main/default/objects/TVA_CFB__Folder_Links__c/fields/TVA_CFB__Password__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>