force-app/main/default/objects/TVA_CFB__Folder_Links__c/fields/TVA_CFB__Short_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Short_URL__c</fullName>
    <label>Short URL</label>
    <type>Url</type>
</CustomField>