force-app/main/default/objects/TVA_CFB__Folder_Links__c/fields/TVA_CFB__Upload_Files__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Upload_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Files</label>
    <type>Checkbox</type>
</CustomField>