force-app/main/default/objects/TVA_CFB__Folder_Links__c/fields/TVA_CFB__Url__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Url__c</fullName>
    <label>Url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>