force-app/main/default/objects/TVA_CFB__Folder_Links__c/listViews/TVA_CFB__All.listView-meta.xml
<ListView>
    <fullName>TVA_CFB__All</fullName>
    <columns>TVA_CFB__Folder_Name__c</columns>
    <columns>TVA_CFB__Folder_Share__c</columns>
    <columns>NAME</columns>
    <columns>TVA_CFB__Parent_ID__c</columns>
    <columns>TVA_CFB__Password__c</columns>
    <columns>TVA_CFB__Url__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>